2013-10-09  Niibe Yutaka  <gniibe@fsij.org>

	* src/ac.c (verify_admin_00): New.  Add authentication by loading
	signature key.
	(verify_admin_0): Use verify_admin_00.

	* src/openpgp.c (cmd_change_password): Admin keystring handling as
	same as user's.

2013-10-08  Niibe Yutaka  <gniibe@fsij.org>

	* src/openpgp.c (modify_binary): Allow odd size of certificate.

	* polarssl/library/rsa.c: Update from PolarSSL 1.2.10.
	* polarssl/include/polarssl/rsa.h: Ditto.

2013-10-07  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_sub_hlp): Return CARRY.
	(mpi_sub_abs): Carry propagatoin is done here.
	(mpi_mul_hlp_mm): Remove.
	(mpi_mul_hlp): Return CARRY, computation in constant time.
	(mpi_mul_mpi): Change the order of computation not to propagate
	carry.
	(mpi_montmul): Minimum zero-ing of D and reduce usage of temporary
	memory, by one word.  Use carry of mpi_mul_hlp.  Use
	NEED_SUBTRACTION against timing attack.
	(mpi_exp_mod): Minimum usage of temporary memory.

2013-10-06  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/library/bignum.c (mpi_mul_hlp_mm): New.  Handle
	extra-carry in constant time to mitigate timing attack.
	(mpi_montmul): Use mpi_mul_hlp_mm.
	* src/call-rsa.c (rsa_sign, rsa_decrypt, rsa_verify): Don't
	use RSA blinding.

2013-10-05  Niibe Yutaka  <gniibe@fsij.org>

	* polarssl/include/polarssl/aes.h: Update from PolarSSL 1.2.9.
	* polarssl/include/polarssl/bignum.h: Ditto.
	* polarssl/include/polarssl/config.h: Ditto.
	* polarssl/include/polarssl/rsa.h: Ditto.
	* polarssl/library/aes.c, polarssl/library/bignum.c: Ditto.
	* polarssl/library/rsa.c: Ditto.  Fix rsa_free.
	* src/call-rsa.c (rsa_sign, modulus_calc, rsa_decrypt)
	(rsa_verify): Follow changes of PolarSSL 1.2.9 with RSA blinding.
	Better error checking.

2013-10-04  Niibe Yutaka  <gniibe@fsij.org>

	* src/main.c (gnuk_malloc): Update ->neighbor field of a chunk on
	the free list.
	(gnuk_free): Access free list after getting the lock.
